--- a/twicpps.vcxproj
+++ b/twicpps.vcxproj
@@ -60,13 +60,13 @@
       <PrecompiledHeader />
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>C:\develop\openssl-1.0.1h-32\inc32</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\develop\openssl-1.0.2h-32\inc32</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalLibraryDirectories>C:\develop\openssl-1.0.1h-32\out32dll</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\develop\openssl-1.0.2h-32\out32dll</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -79,7 +79,7 @@
       <PrecompiledHeader />
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>C:\develop\openssl-1.0.1h-32\inc32</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\develop\openssl-1.0.2h-32\inc32</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -87,21 +87,28 @@
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalLibraryDirectories>C:\develop\openssl-1.0.1h-32\out32dll</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\develop\openssl-1.0.2h-32\out32dll</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\hash.cpp" />
+    <ClCompile Include="src\base64.cpp" />
+    <ClCompile Include="src\charvec.cpp" />
+    <ClCompile Include="src\json.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\oauth.cpp" />
     <ClCompile Include="src\sha1.c" />
     <ClCompile Include="src\tweet.cpp" />
+    <ClCompile Include="src\urlencode.cpp" />
     <ClCompile Include="src\webclient.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\base64.h" />
+    <ClInclude Include="src\charvec.h" />
+    <ClInclude Include="src\json.h" />
     <ClInclude Include="src\oauth.h" />
     <ClInclude Include="src\sha1.h" />
     <ClInclude Include="src\tweet.h" />
+    <ClInclude Include="src\urlencode.h" />
     <ClInclude Include="src\webclient.h" />
     <ClInclude Include="keys\mykey.h" />
   </ItemGroup>
